[workspace]
members = ["packages/api", "packages/cli", "packages/parser", "packages/models"]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["Ryan Cho <cho.ggernaut@gmail.com>"]
license = "MIT"

[workspace.dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tracing = "0.1.41"
sqlx = { version = "0.8.3", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "chrono",
    "uuid",
    "json",
    "macros",
    "derive",
] }
uuid = { version = "1.16", features = ["serde", "v4"] }

parser = { path = "packages/parser" }
models = { path = "packages/models" }
